--- a/Kommunikation_Applikation_und_Hexacopter.tex
+++ b/Kommunikation_Applikation_und_Hexacopter.tex
@@ -113,7 +113,7 @@ Als Treiber wird hier jedoch statt MySQL auf JDBC verwiesen.
 Um die Verbindung herzustellen wurde auf die Funktion DriverManager.getConnection() aufgerufen. Als Parameter musste ihr der Pfad zur Datenbank und die Benutzerdaten mitgeschickt werden.
 \\
 Damit die Tischdaten angezeigt werden konnten, wurde die "showTischdaten()"-Funktion erstellt. Um die ID, die Tischroute und die Tischnummer zu erhalten musste jeweils ein SQL-Statement, welches die Tischdaten ausliest, denen die Bestellung zugewiesen ist, verfasst werden, welches anschließend ausgeführt wurde.
-Die Ergebnisse wurden in ein ResultSet gespeichert. Danach wurden sie in einer Schleife iteriert wurden und der aktuelle Wert aus dem ResultSet als String umgewandelt. Nun konnte die Route als Rückgabewert angegeben werden. Damit in der Bestellungen-Tabelle angemerkt wird, wann die Bestellung ausgeliefert wurde, wurde mit SQL ein Update-Statement erzeugt und mit der "executeUpdate()"-Funktion ausgeführt.
+Die Ergebnisse wurden in ein ResultSet gespeichert. Danach wurden sie in einer Schleife iteriert und der aktuelle Wert aus dem ResultSet als String umgewandelt. Nun konnte die Route als Rückgabewert angegeben werden. Damit in der Bestellungen-Tabelle angemerkt wird, wann die Bestellung ausgeliefert wurde, wurde mit SQL ein Update-Statement erzeugt und mit der "executeUpdate()"-Funktion ausgeführt.
 \\
 Um in einer extra Datenbanktabelle den Verbindungsstatus zwischen dem Hexacopter und dem Server überprüfen zu können, wurde bei jeder Statusänderung die "erstelleDBEintrag()"-Funktion aufgerufen. Das Einfügen von Datenbankeinträgen kann mit einem Insert-Statement erledigt werden. Dieses muss im Anschluss ebenfalls mit der "executeUpdate()"-Methode durchgeführt werden.
     \item \textbf{Komm Manager}\\
@@ -122,7 +122,7 @@ Damit diese Klasse die Funktionen der "SQL Reader"-Klasse verwenden kann, erbt s
 Als globale Variable wird ein Hashset, welches die Teilnehmer beeinhaltet, erstellt. 
 Anschließend wird ein Server Socket erstellt, welchem später ein geeigneter Port zugewiesen wurde.
 Mithilfe eines Timers wird regelmäßig überprüft ob ein Teilnehmer vorhanden ist. Wenn das der Fall ist, wird auf eine  Methode verwiesen, in welcher die Verbindung hergestellt wird und daher auch die SQl Readerfunktion aufgerufen wird, welche den Verbindungsstatus erneuert. Außerdem bekommt der Teilnehmer daraufhin durchgehend eine Nachricht zugeschickt.
-Um zu überprüfen ob der Hexacopter in der Basis ist und somit bereit dazu ist eine Speise auszuliefern, wartet der Server darauf, dass im eine bestimmte Nachricht geschickt wird. Sobald diese bestimmte Nachricht ankommt, liefert die Funktion "true" zurück.
+Um zu überprüfen ob der Hexacopter in der Basis ist und somit bereit dazu ist eine Speise auszuliefern, wartet der Server darauf, dass eine bestimmte Nachricht geschickt wird. Sobald diese bestimmte Nachricht ankommt, liefert die Funktion "true" zurück.
     \item \textbf{Komm Teilnehmer}\\
 Die "Komm Teilnehmer" Klasse wurde dafür entwickelt, die einzelnen Verbindungen zum Hexacopter zu verwalten.
 Dem Teilnehmer Thread wird sowohl der Manager als auch der Server Socket als Parameter mitgeliefert. Über diese kann im Anschluss das Senden und Empfangen der Nachrichten geregelt werden. 
@@ -130,4 +130,4 @@ In dieser Klasse wird die Nachricht des Hexacopters an die Manager Funktion gesc
   \end{itemize}
 
   \subsection{Herausforderungen und Lösungen}
-verbundenstatus
+Hierbei kam ab und zu das Problem auf, dass bei den SQL-Statements vergessen wurde einen Zeilenabstand zu machen nachdem eine Variable eingebunden wurde. Dies waren jedoch nur kleine Fehler die in der Eile entstanden und relativ schnell erörtert und ausgebessert werden konnten.
